Fixing navigation and layout on small devices

--- a/_src/sass/web.scss
+++ b/_src/sass/web.scss
@@ -22,12 +22,12 @@ body {
     text-align: center;
 
 
-    @include gradient($COL_METEORA_DARK, lighten($COL_METEORA_DARK,5%), url("../img/meteor-only.png"), right -400px bottom);
+    @include gradient($COL_METEORA_DARK, lighten($COL_METEORA_DARK,5%), url("../img/meteor-only.png"), right -320px bottom);
     background-size: 100% auto;
     background-repeat: no-repeat;
 
     h1{
-        margin-bottom: 1.3em;
+        margin-bottom: 0.7em;
         line-height: 1em;
         font-weight: 900;
         text-shadow: 0px 0px 7px $COL_MEETEORA_PINK;
@@ -36,6 +36,7 @@ body {
     .meeteora-lead{
         font-size: 1.8em;
         margin-bottom: 1em;
+        line-height: 1.2em;
     }
 }
 
@@ -92,9 +93,9 @@ footer {
 }
 
 .meeteora-navbar {
-    @include gradientsimple($COL_METEORA_DARK, lighten($COL_METEORA_DARK,5%));
-    box-shadow: 0px 0px 10px white;
-
+    //@include gradientsimple($COL_METEORA_DARK, lighten($COL_METEORA_DARK,5%));
+    //box-shadow: 0px 0px 10px white;
+    background: $COL_METEORA_DARK;
 
     .dropdown-menu{
         @include gradientsimple($COL_METEORA_DARK, lighten($COL_METEORA_DARK,5%));
@@ -114,4 +115,10 @@ footer {
     border-width: 2px;
     border-color: $COL_MEETEORA_PINK;
 
+}
+
+#brand-img {
+
+    margin-top: -25px;
+    width: 150px;
 }
